# ClinAI

./: .dockerignore  .env  .gitignore  Dockerfile  Procfile  READ.md  README.md  TTS_test.ipynb  nixpacks.toml  pyproject.toml  requirements.txt
.ipynb_checkpoints/: TTS_test-checkpoint.ipynb
app/: clinai_web.py  main.py
app/agent/: infer.py  tools.py
app/api/: routes.py
app/cli/: conversation_loop.py
app/core/: config.py
app/db/: create_tables.py  models.py  schema.sql  session.py
app/memory/: updater.py  vector_store.py
app/services/: appointments.py  call_service.py  patient_service.py  rx_refills.py
app/static/: index.html
app/ui/: intake_form.py
app/voice/: llm.py  synthesizer.py  transcriber.py  voice_test.py
classifiers/appt_availability_model/: appt_availability_classifier.py  label_map.json  train_appt_availability.py
classifiers/appt_confirmation_model/: READ.md  appt_confirmation_classifier.py  train_appt_confirmation.py
classifiers/appt_context_model/: READ.md  appt_context_classifier.py  label_map.json  train_appt_context.py
config/: admin_info.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  (+1 more)
intent_model/: README.md  intent_classifier.py  train_intent.py
metrics/: README.md  clinai_test_cases.csv  clinai_voice_test_cases.csv  clinai_voice_test_results.csv  test_results.ipynb
scripts/: smoke_call.py  smoke_patient.py  test_classifier.py  test_db.py  test_intent_classifier.py  test_ollama.py  test_voice.py
tests/: test_ollama.py  test_voice.py
(+110 files in other folders)
