[project]
name = "clinai"
version = "0.1.0"
description = ""
authors = [
    {name = "Brandon-Nicholson",email = "brandon.s.nicholson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "tzdata (>=2025.3,<2026.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "ctranslate2 (>=4.6.2,<5.0.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "edge-tts (==7.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "transformers[torch] (>=4.57.3,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "datasets (>=4.4.2,<5.0.0)",
    "evaluate (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
